performance test is improved